# console-winapi-wrappers

./: Cargo.toml  LICENSE-MIT  Readme.md
doc/: console-function-mapping.md
src/: _impl.rs  _lib.rs  _traits.rs  alias.rs  alloc.rs  charattrib.rs  codepage.rs  font.rs  handles.rs  io.rs  mode.rs  text.rs  window.rs
src/values/: _values.rs  ascii_or_unicode_char.rs  char_info.rs  color_ref.rs  console_cursor_info.rs  console_font_info.rs  console_font_info_ex.rs  console_screen_buffer_info.rs  console_screen_buffer_info_ex.rs  coord.rs  input_record.rs  input_record_event_type.rs  small_rect.rs
